# agent-framework

./: .gitignore  AGENTS.md  PROMPTS.md  README.md
agent_framework/: .env.example  config.py  main.py  pyproject.toml
agent_framework/ctx/: compactor.py
agent_framework/llm/: client.py
agent_framework/runtime/: __init__.py  agent.py  agent_memory.py  claude_memory.py  executor.py  fsm.py  memory_projector.py  planner.py  recaller.py  reflexion.py  replanner.py  rewoo.py  router.py
agent_framework/session/: __init__.py  models.py  store.py
agent_framework/static/: index.html
agent_framework/tests/: test_agent.py  test_agent_memory.py  test_claude_memory.py  test_compactor.py  test_config.py  test_e2e_deepseek.py  test_executor.py  test_fsm.py  test_integration.py  test_llm_client.py  test_memory_projector.py  test_models.py  test_planner.py  test_recaller.py  test_reflexion.py  test_replanner.py  test_rewoo.py  test_router.py  test_store.py  test_tools.py  test_trace.py  test_web.py
agent_framework/tools/: __init__.py  base.py  calculator.py  memory.py  search.py  todo.py
agent_framework/trace/: __init__.py  logger.py
docs/: PLAN.md  PROMPTS.md  claude-code-context-management.md  优化评估.md
docs/superpowers/: STYLE.md
docs/superpowers/plans/: 2026-06-13-agent-framework-impl-plan.md  2026-06-13-agent-framework-s1-impl.md  2026-06-13-agent-framework-s2-impl.md  2026-06-14-agent-framework-s3-impl.md  2026-06-14-agent-framework-s4-impl.md
docs/superpowers/specs/: 2026-06-13-agent-framework-design.md
